# MLIR-GPU

./: .gitignore  CMakeLists.txt  build_polygist_and_polymer.sh  debufferize.mlir
include/polygeist/: PolygeistOps.td
include/polygeist/Passes/: Passes.h  Passes.td
lib/polygeist/: Ops.cpp
lib/polygeist/Passes/: CMakeLists.txt  LinalgDebufferize.cpp  RaiseToLinalg.cpp  RemoveIterArgs.cpp
test/polygeist-opt/: linalg_debufferize_tile_fusion.mlir  linalgraise.mlir  raised_with_submap.mlir  submapcanonicalize.mlir
tools/cgeist/: CMakeLists.txt
tools/cgeist/Test/Verification/: debug-info.c
tools/polygeist-opt/: polygeist-opt.cpp
tools/polymer/: CMakeLists.txt  build_polymer_deps.sh  build_polymer_deps_with_bullseye.sh  typescript
tools/polymer/cmake/: AddBullseye.cmake  AddCPLEX.cmake  AddPluto.cmake  FindGLPK.cmake  FindNTL.cmake
tools/polymer/include/polymer/Transforms/: BullsEyeAnalysis.h
tools/polymer/lib/Support/: CMakeLists.txt
tools/polymer/lib/Transforms/: BullsEyeAnalysis.cc  CMakeLists.txt
tools/polymer/tools/polymer-opt/: polymer-opt.cc
